ecommerce product page - mobile carousel accessibility

--- a/ecommerce-product-page/index.html
+++ b/ecommerce-product-page/index.html
@@ -112,12 +112,12 @@
               <img src="images/image-product-4.jpg"" alt="pair of shoes angle 4"
               class="slide__img" />
             </div>
-            <a id="slide-prev" class="slide-btn btn--prev"
-              ><img src="images/icon-previous.svg" alt="arrow to left"
-            /></a>
-            <a id="slide-next" class="slide-btn btn--next"
-              ><img src="images/icon-next.svg" alt="arrow to right"
-            /></a>
+            <button id="slide-prev" tabindex="0" class="slide-btn btn--prev">
+              <img src="images/icon-previous.svg" alt="arrow to left" />
+            </button>
+            <button id="slide-next" tabindex="0" class="slide-btn btn--next">
+              <img src="images/icon-next.svg" alt="arrow to right" />
+            </button>
             <div id="thumbnail-nav" class="thumbnail-nav">
               <button view="1" class="thumbnail thumbnail--active" tabindex="0">
                 <img
