--- a/ecommerce-product-page/index.html
+++ b/ecommerce-product-page/index.html
@@ -148,6 +148,87 @@
                 />
               </button>
             </div>
+            <div class="lightbox">
+              <div class="lightbox-content">
+                <div class="fill">
+                  <button class="close-lightbox">
+                    <img
+                      src="images/icon-close.svg"
+                      class="close-lightbox__img"
+                    />
+                  </button>
+                </div>
+                <div class="lightbox-carousel">
+                  <div view="1" class="slide fade active">
+                    <img
+                      src="images/image-product-1.jpg"
+                      alt="pair of shoes angle 1"
+                      class="slide__img"
+                    />
+                  </div>
+                  <div view="2" class="slide fade">
+                    <img src="images/image-product-2.jpg"" alt="pair of shoes
+                    angle 2" class="slide__img" />
+                  </div>
+                  <div view="3" class="slide fade">
+                    <img src="images/image-product-3.jpg"" alt="pair of shoes
+                    angle 3" class="slide__img" />
+                  </div>
+                  <div view="4" class="slide fade">
+                    <img src="images/image-product-4.jpg"" alt="pair of shoes
+                    angle 4" class="slide__img" />
+                  </div>
+                  <button
+                    id="slide-prev"
+                    tabindex="0"
+                    class="slide-btn btn--prev"
+                  >
+                    <img src="images/icon-previous.svg" alt="arrow to left" />
+                  </button>
+                  <button
+                    id="slide-next"
+                    tabindex="0"
+                    class="slide-btn btn--next"
+                  >
+                    <img src="images/icon-next.svg" alt="arrow to right" />
+                  </button>
+                </div>
+                <div id="thumbnail-nav" class="thumbnail-nav">
+                  <button
+                    view="1"
+                    class="thumbnail thumbnail--active"
+                    tabindex="0"
+                  >
+                    <img
+                      src="images/image-product-1-thumbnail.jpg"
+                      alt="pair of shoes angle 1"
+                      class="thumbnail__img"
+                    />
+                  </button>
+                  <button view="2" class="thumbnail" tabindex="0">
+                    <img
+                      src="images/image-product-2-thumbnail.jpg"
+                      alt="pair of shoes angle 2"
+                      class="thumbnail__img"
+                    />
+                  </button>
+                  <button view="3" class="thumbnail" tabindex="0">
+                    <img
+                      src="images/image-product-3-thumbnail.jpg"
+                      alt="pair of shoes angle 3"
+                      class="thumbnail__img"
+                    />
+                  </button>
+                  <button view="4" class="thumbnail" tabindex="0">
+                    <img
+                      src="images/image-product-4-thumbnail.jpg"
+                      alt="pair of shoes angle 4"
+                      class="thumbnail__img"
+                    />
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="container">
             <p class="subtitle">Sneaker Company</p>
