--- a/ecommerce-product-page/index.html
+++ b/ecommerce-product-page/index.html
@@ -92,55 +92,79 @@
       </header>
       <main id="main" class="main">
         <div class="inner-card">
-          <div class="carousel">
-            <div view="1" class="slide fade active">
+          <div id="carousel" class="carousel">
+            <div view="1" class="slide slide--carousel fade active">
               <img
                 src="images/image-product-1.jpg"
                 alt="pair of shoes angle 1"
                 class="slide__img"
               />
             </div>
-            <div view="2" class="slide fade">
+            <div view="2" class="slide slide--carousel fade">
               <img src="images/image-product-2.jpg"" alt="pair of shoes angle 2"
               class="slide__img" />
             </div>
-            <div view="3" class="slide fade">
+            <div view="3" class="slide slide--carousel fade">
               <img src="images/image-product-3.jpg"" alt="pair of shoes angle 3"
               class="slide__img" />
             </div>
-            <div view="4" class="slide fade">
+            <div view="4" class="slide slide--carousel fade">
               <img src="images/image-product-4.jpg"" alt="pair of shoes angle 4"
               class="slide__img" />
             </div>
-            <button id="slide-prev" tabindex="0" class="slide-btn btn--prev">
+            <button
+              id="slide-prev--carousel"
+              tabindex="0"
+              class="slide-btn btn--prev"
+            >
               <img src="images/icon-previous.svg" alt="arrow to left" />
             </button>
-            <button id="slide-next" tabindex="0" class="slide-btn btn--next">
+            <button
+              id="slide-next--carousel"
+              tabindex="0"
+              class="slide-btn btn--next"
+            >
               <img src="images/icon-next.svg" alt="arrow to right" />
             </button>
-            <div id="thumbnail-nav" class="thumbnail-nav">
-              <button view="1" class="thumbnail thumbnail--active" tabindex="0">
+            <div id="thumbnail-nav--carousel" class="thumbnail-nav">
+              <button
+                view="1"
+                class="thumbnail thumbnail--carousel thumbnail--active"
+                tabindex="0"
+              >
                 <img
                   src="images/image-product-1-thumbnail.jpg"
                   alt="pair of shoes angle 1"
                   class="thumbnail__img"
                 />
               </button>
-              <button view="2" class="thumbnail" tabindex="0">
+              <button
+                view="2"
+                class="thumbnail thumbnail--carousel"
+                tabindex="0"
+              >
                 <img
                   src="images/image-product-2-thumbnail.jpg"
                   alt="pair of shoes angle 2"
                   class="thumbnail__img"
                 />
               </button>
-              <button view="3" class="thumbnail" tabindex="0">
+              <button
+                view="3"
+                class="thumbnail thumbnail--carousel"
+                tabindex="0"
+              >
                 <img
                   src="images/image-product-3-thumbnail.jpg"
                   alt="pair of shoes angle 3"
                   class="thumbnail__img"
                 />
               </button>
-              <button view="4" class="thumbnail" tabindex="0">
+              <button
+                view="4"
+                class="thumbnail thumbnail--carousel"
+                tabindex="0"
+              >
                 <img
                   src="images/image-product-4-thumbnail.jpg"
                   alt="pair of shoes angle 4"
@@ -148,85 +172,97 @@
                 />
               </button>
             </div>
-            <div class="lightbox">
-              <div class="lightbox-content">
-                <div class="fill">
-                  <button class="close-lightbox">
-                    <img
-                      src="images/icon-close.svg"
-                      class="close-lightbox__img"
-                    />
-                  </button>
+          </div>
+          <div id="lightbox" class="lightbox">
+            <div class="lightbox-content">
+              <div class="fill">
+                <button id="close-lightbox-btn" class="close-lightbox">
+                  <img
+                    src="images/icon-close.svg"
+                    class="close-lightbox__img"
+                  />
+                </button>
+              </div>
+              <div id="lightbox-carousel" class="lightbox-carousel">
+                <div view="1" class="slide slide--lightbox fade active">
+                  <img
+                    src="images/image-product-1.jpg"
+                    alt="pair of shoes angle 1"
+                    class="slide__img"
+                  />
                 </div>
-                <div class="lightbox-carousel">
-                  <div view="1" class="slide fade active">
-                    <img
-                      src="images/image-product-1.jpg"
-                      alt="pair of shoes angle 1"
-                      class="slide__img"
-                    />
-                  </div>
-                  <div view="2" class="slide fade">
-                    <img src="images/image-product-2.jpg"" alt="pair of shoes
-                    angle 2" class="slide__img" />
-                  </div>
-                  <div view="3" class="slide fade">
-                    <img src="images/image-product-3.jpg"" alt="pair of shoes
-                    angle 3" class="slide__img" />
-                  </div>
-                  <div view="4" class="slide fade">
-                    <img src="images/image-product-4.jpg"" alt="pair of shoes
-                    angle 4" class="slide__img" />
-                  </div>
-                  <button
-                    id="slide-prev"
-                    tabindex="0"
-                    class="slide-btn btn--prev"
-                  >
-                    <img src="images/icon-previous.svg" alt="arrow to left" />
-                  </button>
-                  <button
-                    id="slide-next"
-                    tabindex="0"
-                    class="slide-btn btn--next"
-                  >
-                    <img src="images/icon-next.svg" alt="arrow to right" />
-                  </button>
+                <div view="2" class="slide slide--lightbox fade">
+                  <img src="images/image-product-2.jpg"" alt="pair of shoes
+                  angle 2" class="slide__img" />
                 </div>
-                <div id="thumbnail-nav" class="thumbnail-nav">
-                  <button
-                    view="1"
-                    class="thumbnail thumbnail--active"
-                    tabindex="0"
-                  >
-                    <img
-                      src="images/image-product-1-thumbnail.jpg"
-                      alt="pair of shoes angle 1"
-                      class="thumbnail__img"
-                    />
-                  </button>
-                  <button view="2" class="thumbnail" tabindex="0">
-                    <img
-                      src="images/image-product-2-thumbnail.jpg"
-                      alt="pair of shoes angle 2"
-                      class="thumbnail__img"
-                    />
-                  </button>
-                  <button view="3" class="thumbnail" tabindex="0">
-                    <img
-                      src="images/image-product-3-thumbnail.jpg"
-                      alt="pair of shoes angle 3"
-                      class="thumbnail__img"
-                    />
-                  </button>
-                  <button view="4" class="thumbnail" tabindex="0">
-                    <img
-                      src="images/image-product-4-thumbnail.jpg"
-                      alt="pair of shoes angle 4"
-                      class="thumbnail__img"
-                    />
-                  </button>
+                <div view="3" class="slide slide--lightbox fade">
+                  <img src="images/image-product-3.jpg"" alt="pair of shoes
+                  angle 3" class="slide__img" />
                 </div>
+                <div view="4" class="slide slide--lightbox fade">
+                  <img src="images/image-product-4.jpg"" alt="pair of shoes
+                  angle 4" class="slide__img" />
+                </div>
+                <button
+                  id="slide-prev--lightbox"
+                  tabindex="0"
+                  class="slide-btn btn--prev"
+                >
+                  <img src="images/icon-previous.svg" alt="arrow to left" />
+                </button>
+                <button
+                  id="slide-next--lightbox"
+                  tabindex="0"
+                  class="slide-btn btn--next"
+                >
+                  <img src="images/icon-next.svg" alt="arrow to right" />
+                </button>
+              </div>
+              <div id="thumbnail-nav--lightbox" class="thumbnail-nav">
+                <button
+                  view="1"
+                  class="thumbnail thumbnail--lightbox thumbnail--active"
+                  tabindex="0"
+                >
+                  <img
+                    src="images/image-product-1-thumbnail.jpg"
+                    alt="pair of shoes angle 1"
+                    class="thumbnail__img"
+                  />
+                </button>
+                <button
+                  view="2"
+                  class="thumbnail thumbnail--lightbox"
+                  tabindex="0"
+                >
+                  <img
+                    src="images/image-product-2-thumbnail.jpg"
+                    alt="pair of shoes angle 2"
+                    class="thumbnail__img"
+                  />
+                </button>
+                <button
+                  view="3"
+                  class="thumbnail thumbnail--lightbox"
+                  tabindex="0"
+                >
+                  <img
+                    src="images/image-product-3-thumbnail.jpg"
+                    alt="pair of shoes angle 3"
+                    class="thumbnail__img"
+                  />
+                </button>
+                <button
+                  view="4"
+                  class="thumbnail thumbnail--lightbox"
+                  tabindex="0"
+                >
+                  <img
+                    src="images/image-product-4-thumbnail.jpg"
+                    alt="pair of shoes angle 4"
+                    class="thumbnail__img"
+                  />
+                </button>
               </div>
             </div>
           </div>
