bmi calculator - mobile asides

--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -15,153 +15,300 @@
   </head>
   <body>
     <div class="gradient"></div>
-    <div>
-      <main class="main">
-        <article>
-          <img class="logo" src="images/logo.svg" alt="logo" />
-          <h1 class="title-main">Body Mass Index Calculator</h1>
-          <p class="description">
-            Better understand your weight in relation to your height using our
-            body mass index (BM) calculator. While BMI is not the sole
-            determinant of a healthy weight, it offers a valuable starting point
-            to evaluate your overall health and well-being.
+    <div class="container">
+      <div class="content">
+        <main class="main">
+          <article>
+            <img class="logo" src="images/logo.svg" alt="logo" />
+            <h1 class="title-main">Body Mass Index Calculator</h1>
+            <p class="description">
+              Better understand your weight in relation to your height using our
+              body mass index (BM) calculator. While BMI is not the sole
+              determinant of a healthy weight, it offers a valuable starting
+              point to evaluate your overall health and well-being.
+            </p>
+          </article>
+          <article class="calculator">
+            <h2 class="title-calc">Enter your details below</h2>
+            <section class="units">
+              <label class="radio" for="metric-option"
+                ><input
+                  type="radio"
+                  name="units"
+                  id="metric-option"
+                  value="metric-option"
+                  checked
+                />Metric</label
+              >
+              <label class="radio" for="imperial-option"
+                ><input
+                  type="radio"
+                  name="units"
+                  id="imperial-option"
+                  value="imperial-option"
+                />Imperial</label
+              >
+            </section>
+            <section class="measurements">
+              <div id="metric" class="unit metric">
+                <div class="measurement">
+                  <label class="measurement__label" for="metric-height-cm"
+                    >Height</label
+                  >
+                  <div class="measurement__input">
+                    <input
+                      type="number"
+                      name="metric-height-cm"
+                      min="0"
+                      max="300"
+                      id="metric-height-cm"
+                      placeholder="0"
+                    />
+                    <span>cm</span>
+                  </div>
+                </div>
+                <div class="measurement">
+                  <label class="measurement__label" for="metric-weight-kg"
+                    >Weight</label
+                  >
+                  <div class="measurement__input">
+                    <input
+                      type="number"
+                      name="metric-weight-kg"
+                      min="0"
+                      max="700"
+                      id="metric-weight-kg"
+                      placeholder="0"
+                    />
+                    <span>kg</span>
+                  </div>
+                </div>
+              </div>
+              <div id="imperial" class="unit imperial hidden">
+                <div class="measurement">
+                  <label class="measurement__label" for="imperial-height-in"
+                    >Height</label
+                  >
+                  <div class="measurement__inputs">
+                    <div class="measurement__input">
+                      <input
+                        type="number"
+                        name="imperial-height-ft"
+                        min="0"
+                        max="9"
+                        id="imperial-height-ft"
+                        placeholder="0"
+                      />
+                      <span>ft</span>
+                    </div>
+                    <div class="measurement__input">
+                      <input
+                        type="number"
+                        name="imperial-height-in"
+                        min="0"
+                        max="11"
+                        id="imperial-height-in"
+                        placeholder="0"
+                      />
+                      <span>in</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="measurement">
+                  <label class="measurement__label" for="imperial-weight-lbs"
+                    >Weight</label
+                  >
+                  <div class="measurement__inputs">
+                    <div class="measurement__input">
+                      <input
+                        type="number"
+                        name="imperial-weight-st"
+                        min="0"
+                        max="100"
+                        id="imperial-weight-st"
+                        placeholder="0"
+                      />
+                      <span>st</span>
+                    </div>
+                    <div class="measurement__input">
+                      <input
+                        type="number"
+                        name="imperial-weight-lbs"
+                        min="0"
+                        max="13"
+                        id="imperial-weight-lbs"
+                        placeholder="0"
+                      />
+                      <span>lbs</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section id="bmi--welcome" class="bmi">
+              <h2 class="bmi__title">Welcome!</h2>
+              <p class="bmi__description">
+                Enter your height and weight and you'll see your BMI result here
+              </p>
+            </section>
+            <section id="bmi--result" class="bmi hidden">
+              <div class="bmi__result">
+                <p class="bmi__result__prefix">Your BMI is...</p>
+                <p class="bmi__result__actual"></p>
+              </div>
+              <p class="bmi__explanation">
+                Your BMI suggests you're a healthy weight. Your ideal weight is
+                between <strong id="bmi-range"></strong>.
+              </p>
+            </section>
+          </article>
+        </main>
+        <img
+          class="hero-image"
+          src="images/image-man-eating.webp"
+          alt="man with a tatoo, wearing a t-shirt and watch eating sushi"
+        />
+        <aside class="meaning-aside">
+          <h2 class="meaning__title">What your BMI result means</h2>
+          <p class="meaning_description">
+            A BMI range of 18.5 to 24.9 is considered a 'healthy weight.'
+            Maintaining a healthy weight may lower your chances of experiencing
+            health issues later on, such as obesity and type 2 diabetes. Aim for
+            a nutritious diet with reduced fat and sugar content, incorporating
+            ample fruits and vegetables. Additionally, strive for regular
+            physical activity, ideally about 30 minutes daily for five days a
+            week.
           </p>
-        </article>
-        <article class="calculator">
-          <h2 class="title-calc">Enter your details below</h2>
-          <section class="units">
-            <label class="radio" for="metric"
-              ><input
-                type="radio"
-                name="units"
-                id="metric-option"
-                value="metric-option"
-                checked
-              />Metric</label
-            >
-            <label class="radio" for="imperial"
-              ><input
-                type="radio"
-                name="units"
-                id="imperial-option"
-                value="imperial-option"
-              />Imperial</label
-            >
-          </section>
-          <section class="measurements">
-            <div id="metric" class="unit metric">
-              <div class="measurement">
-                <label class="measurement__label" for="metric-height-cm"
-                  >Height</label
-                >
-                <div class="measurement__input">
-                  <input
-                    type="number"
-                    name="metric-height-cm"
-                    min="0"
-                    max="300"
-                    id="metric-height-cm"
-                    placeholder="0"
-                  />
-                  <span>cm</span>
-                </div>
-              </div>
-              <div class="measurement">
-                <label class="measurement__label" for="metric-weight-kg"
-                  >Weight</label
-                >
-                <div class="measurement__input">
-                  <input
-                    type="number"
-                    name="metric-weight-kg"
-                    min="0"
-                    max="700"
-                    id="metric-weight-kg"
-                    placeholder="0"
-                  />
-                  <span>kg</span>
-                </div>
-              </div>
-            </div>
-            <div id="imperial" class="unit imperial hidden">
-              <div class="measurement">
-                <label class="measurement__label" for="imperial-height"
-                  >Height</label
-                >
-                <div class="measurement__inputs">
-                  <div class="measurement__input">
-                    <input
-                      type="number"
-                      name="imperial-height-ft"
-                      min="0"
-                      max="9"
-                      id="imperial-height-ft"
-                      placeholder="0"
-                    />
-                    <span>ft</span>
-                  </div>
-                  <div class="measurement__input">
-                    <input
-                      type="number"
-                      name="imperial-height-in"
-                      min="0"
-                      max="11"
-                      id="imperial-height-in"
-                      placeholder="0"
-                    />
-                    <span>in</span>
-                  </div>
-                </div>
-              </div>
-              <div class="measurement">
-                <label class="measurement__label" for="metric-weight-kg"
-                  >Weight</label
-                >
-                <div class="measurement__inputs">
-                  <div class="measurement__input">
-                    <input
-                      type="number"
-                      name="metric-weight-st"
-                      min="0"
-                      max="100"
-                      id="metric-weight-st"
-                      placeholder="0"
-                    />
-                    <span>st</span>
-                  </div>
-                  <div class="measurement__input">
-                    <input
-                      type="number"
-                      name="metric-weight-lbs"
-                      min="0"
-                      max="13"
-                      id="metric-weight-lbs"
-                      placeholder="0"
-                    />
-                    <span>lbs</span>
-                  </div>
-                </div>
-              </div>
+        </aside>
+        <aside class="tips-aside">
+          <section class="tip">
+            <img
+              class="tip__icon"
+              src="images/icon-eating.svg"
+              alt="eating icon"
+            />
+            <div class="tip__text">
+              <h3 class="tip__title">Healthy eating</h3>
+              <p class="tip__description">
+                Healthy eating promotes weight control, disease prevention,
+                better digestion, immunity, mental clarity, and mood.
+              </p>
             </div>
           </section>
-          <section id="bmi--welcome" class="bmi">
-            <h2 class="bmi__title">Welcome!</h2>
-            <p class="bmi__description">
-              Enter your height and weight and you'll see your BMI result here
+          <section class="tip">
+            <img
+              class="tip__icon"
+              src="images/icon-exercise.svg"
+              alt="exercise icon"
+            />
+            <div class="tip__text">
+              <h3 class="tip__title">Regular exercise</h3>
+              <p class="tip__description">
+                Exercise improves fitness, aids weight control, elevates mood,
+                and reduces disease risk, fostering wellness and longevity.
+              </p>
+            </div>
+          </section>
+          <section class="tip">
+            <img
+              class="tip__icon"
+              src="images/icon-sleep.svg"
+              alt="sleep icon"
+            />
+            <div class="tip__text">
+              <h3 class="tip__title">Adequate sleep</h3>
+              <p class="tip__description">
+                Sleep enhances mental clarity, emotional stability, and physical
+                wellness, promoting overall restoration and rejuvenation.
+              </p>
+            </div>
+          </section>
+        </aside>
+        <aside class="limitations-aside">
+          <section class="limitations-text">
+            <h2 class="limitations-text__title">Limitations of BMI</h2>
+            <p class="limitations-text-description">
+              Although BMI is often a practical indicator of healthy weight, it
+              is not suited for every person. Specific groups should carefully
+              consider their BMI outcomes, and in certain cases, the measurement
+              may not be beneficial to use.
             </p>
           </section>
-          <section id="bmi--result" class="bmi hidden">
-            <div class="bmi__result">
-              <p class="bmi__result__prefix">Your BMI is...</p>
-              <p class="bmi__result__actual"></p>
+          <div class="limitation">
+            <div class="limitation__header">
+              <img
+                src="images/icon-gender.svg"
+                alt="gender icon"
+                class="limitation__icon"
+              />
+              <h3 class="limitation__title">Gender</h3>
             </div>
-            <p class="bmi__explanation">
-              Your BMI suggests you're a healthy weight. Your ideal weight is
-              between <strong></strong>.
+            <p class="limitation__description">
+              The development and body fat composition of girls and boys vary
+              with age. Consequently, a child's age and gender are considered
+              when evaluating their BMI.
             </p>
-          </section>
-        </article>
-      </main>
+          </div>
+          <div class="limitation">
+            <div class="limitation__header">
+              <img
+                src="images/icon-age.svg"
+                alt="age icon"
+                class="limitation__icon"
+              />
+              <h3 class="limitation__title">Age</h3>
+            </div>
+            <p class="limitation__description">
+              In aging individuals, increased body fat and muscle loss may cause
+              BMI to underestimate body fat content.
+            </p>
+          </div>
+          <div class="limitation">
+            <div class="limitation__header">
+              <img
+                src="images/icon-muscle.svg"
+                alt="muscle icon"
+                class="limitation__icon"
+              />
+              <h3 class="limitation__title">Muscle</h3>
+            </div>
+            <p class="limitation__description">
+              BMI may misclassify muscular individuals as overweight or obese,
+              as it doesn't differentiate muscle from fat.
+            </p>
+          </div>
+          <div class="limitation">
+            <div class="limitation__header">
+              <img
+                src="images/icon-pregnancy.svg"
+                alt="pregnancy icon"
+                class="limitation__icon"
+              />
+              <h3 class="limitation__title">Pregnancy</h3>
+            </div>
+            <p class="limitation__description">
+              Expectant mothers experience weight gain due to their growing
+              baby. Maintaining a healthy pre-pregnancy BMI is advisable to
+              minimise health risks for both mother and child.
+            </p>
+          </div>
+          <div class="limitation">
+            <div class="limitation__header">
+              <img
+                src="images/icon-race.svg"
+                alt="race icon"
+                class="limitation__icon"
+              />
+              <h3 class="limitation__title">Race</h3>
+            </div>
+            <p class="limitation__description">
+              Certain health concerns may affect individuals of some Black and
+              Asian origins at lower BMIs than others. To learn more, it is
+              advised to discuss this with your GP or practice nurse.
+            </p>
+          </div>
+        </aside>
+      </div>
     </div>
   </body>
 </html>
